[gd_scene load_steps=7 format=3 uid="uid://br8oo3g2vefnp"]

[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_pjxla"]
[ext_resource type="Script" path="res://Scripts/AudienceManager.gd" id="2_av278"]
[ext_resource type="Script" path="res://Scripts/PlayerAudience.gd" id="3_5o47k"]
[ext_resource type="PackedScene" uid="uid://cuxd723yd4gkk" path="res://Scenes/friend.tscn" id="4_hj1rc"]
[ext_resource type="Script" path="res://Scripts/FaceView.gd" id="5_ypb41"]
[ext_resource type="Script" path="res://Scripts/TimerView.gd" id="6_dlhl4"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_pjxla")

[node name="AudienceView" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="AudienceView"]

[node name="Audience" type="Node2D" parent="AudienceView"]
script = ExtResource("2_av278")

[node name="Player" type="Sprite2D" parent="AudienceView/Audience"]
script = ExtResource("3_5o47k")

[node name="Friend" parent="AudienceView/Audience" instance=ExtResource("4_hj1rc")]

[node name="StageManager" type="Node2D" parent="AudienceView"]

[node name="Actor" type="Sprite2D" parent="AudienceView/StageManager"]

[node name="FaceView" type="Node2D" parent="."]
script = ExtResource("5_ypb41")

[node name="Face" type="Sprite2D" parent="FaceView"]

[node name="TimerView" type="Node2D" parent="."]
script = ExtResource("6_dlhl4")

[node name="Clock" type="Sprite2D" parent="TimerView"]

[node name="Pointer" type="Sprite2D" parent="TimerView"]

[node name="Timer" type="Timer" parent="TimerView"]
process_callback = 0
one_shot = true

[node name="Cooldown" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="TimerView/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
